WidgetsCatalogMarkupController up
WidgetsCatalogMarkupController up

Issue-ID: PORTAL-710
Change-Id: Ie8b58f17ec195f7facd94315c5f24181757c1c2a
Signed-off-by: Dominik Mizyn <d.mizyn@samsung.com>